--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,7 +1,77 @@
-.login-form {
-    max-width: 300px;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 12pt;
 }
 
-.main_body {}
+.navigation {
+    margin-bottom: 40px;
+}
 
-.login-form {}
+.content {
+    display: flex;
+    flex-shrink: 0!important;
+}
+
+.main-body {
+    margin-right: 40px;
+    margin-bottom: 100px;
+}
+
+.login-form {
+    min-width: 360px;
+    height: fit-content;
+    padding: 40px 30px;
+    box-sizing: border-box;
+    background: #FFFFFF;
+    box-shadow: 5px 20px 50px rgba(16, 112, 177, 0.2);
+    border-radius: 10px;
+}
+
+.footer {
+    height: 60px;
+    background-color: #f8f9fa;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+.copyrights {
+    margin: 20px auto;
+}
+
+@media(max-width: 997px) {
+    .navigation {
+        margin-bottom: 20px;
+    }
+    .main-body {
+        margin-right: 0;
+    }
+    .login-form {
+        min-width: 100%;
+        padding: 40px 20px;
+        box-shadow: none;
+    }
+    .container {
+        padding-left: 32px;
+        padding-right: 32px;
+    }
+    .content {
+        flex-direction: column-reverse;
+    }
+}
+
+@media(max-width: 667px) {
+    .navigation {
+        margin-bottom: 10px;
+    }
+    .login-form {
+        min-width: 100%;
+        padding: 20px 10px;
+        box-shadow: none;
+    }
+    .login-form_input {
+        width: 100%;
+        height: 36px;
+    }
+}
