--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -14,6 +14,11 @@ body {
     flex-shrink: 0!important;
 }
 
+.profile_content {
+    display: flex;
+    flex-direction: column;
+}
+
 .main-body {
     margin-right: 40px;
     margin-bottom: 100px;
@@ -61,6 +66,14 @@ body {
         min-width: 100%;
         padding: 40px 20px;
         box-shadow: none;
+    }
+    .user-details {
+        flex-direction: column;
+        justify-content: start;
+    }
+    .user-details__data {
+        display: flex;
+        flex-wrap: wrap;
     }
     .container {
         padding-left: 32px;
